--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 <body>
     <h1>THis is the Heading</h1>
     <p>This is a paragraph.</p>
+
+    <h3>This is a subheading</h3>
+    <p>This is second paragraph.</p>
 </body>
 </html>
